force-app/main/default/objects/Visit__c/fields/Check_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Location__c</fullName>
    <inlineHelpText>Locations where the visit starts</inlineHelpText>
    <label>Check-In Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>