force-app/main/default/objects/Visit__c/fields/Check_Out_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Location__c</fullName>
    <inlineHelpText>Locations where visit ends</inlineHelpText>
    <label>Check-Out Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>