force-app/main/default/objects/Visit__c/fields/Credated_From_ui__c.field-meta.xml
<CustomField>
    <fullName>Credated_From_ui__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credated_From_ui</label>
    <type>Checkbox</type>
</CustomField>