force-app/main/default/objects/Visit__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName</formula>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>