force-app/main/default/objects/Visit__c/fields/Missed_PostPone_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_PostPone_Reason__c</fullName>
    <label>Missed / Postpone Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>