force-app/main/default/objects/Visit__c/fields/Missed_Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Visit_Reason__c</fullName>
    <label>Missed Visit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Available</fullName>
            </value>
            <value>
                <fullName>Customer Postponed / Rescheduled Meeting</fullName>
            </value>
            <value>
                <fullName>Customer Denied</fullName>
            </value>
            <value>
                <fullName>Demo Postponed</fullName>
            </value>
            <value>
                <fullName>Demo Machine not Available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>