force-app/main/default/objects/Visit__c/fields/Odometer_Reading_End__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading_End__c</fullName>
    <description>Ending odometer reading for the visit</description>
    <inlineHelpText>Enter the odometer reading at the end of the visit.</inlineHelpText>
    <label>Odometer Reading End</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>