force-app/main/default/objects/Visit__c/fields/PostPoned_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>PostPoned_Start_Time__c</fullName>
    <label>PostPoned Start Time</label>
    <type>DateTime</type>
</CustomField>