force-app/main/default/objects/Visit__c/fields/Visit_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Visit_Feedback__c</fullName>
    <label>Visit Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>