force-app/main/default/objects/Visit__c/fields/Visit_for__c.field-meta.xml
<CustomField>
    <fullName>Visit_for__c</fullName>
    <label>Visit for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>