force-app/main/default/objects/Visit__c/fields/Visit_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID__c</fullName>
    <formula>Name &amp;
&quot; - &quot; &amp;
IF(
    ISPICKVAL(Visit_for__c, &quot;Customer&quot;),
    AccountName__c,
    Lead_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit ID</label>
    <type>Text</type>
</CustomField>