force-app/main/default/objects/Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Work  Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
            <value>
                <fullName>Customer Demanded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>