force-app/main/default/objects/Visit__c/fields/With_Companion__c.field-meta.xml
<CustomField>
    <fullName>With_Companion__c</fullName>
    <label>With Companion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>