force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visit_ID__c</columns>
    <columns>Visit_for__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Daily_Log__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>