force-app/main/default/objects/Visit__c/listViews/This_week.listView-meta.xml
<ListView>
    <fullName>This_week</fullName>
    <columns>NAME</columns>
    <columns>Visit_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This week</label>
</ListView>