force-app/main/default/objects/Visit__c/listViews/Todays_Visits.listView-meta.xml
<ListView>
    <fullName>Todays_Visits</fullName>
    <columns>NAME</columns>
    <columns>Visit_for__c</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Daily_Log__c</columns>
    <columns>Visit_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Distance__c</columns>
    <columns>Distance_Calculated_by_Google_API__c</columns>
    <columns>Visit_Start__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Visits</label>
</ListView>