force-app/main/default/objects/Visit__c/listViews/YESTERDAY.listView-meta.xml
<ListView>
    <fullName>YESTERDAY</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Visit_Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>YESTERDAY</label>
</ListView>